Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28050

Error on compiling of storage/maria/ma_open.c

Details

    Description

      In file included from server-10.9/storage/maria/ma_open.c:27:
      server-10.9/storage/maria/s3_func.h:144:24: error: redefinition of typedef 'S3_INFO' is a C11 feature [-Werror,-Wtypedef-redefinition]
      typedef struct s3_info S3_INFO;
                             ^
      server-10.9/storage/maria/maria_def.h:170:24: note: previous definition is here
      typedef struct s3_info S3_INFO;
      

      Running make with the option VERBOSE=1 shows that compiler is invoked with the option -std=gnu99 that is the reason of the above compilation failure.

      Attachments

        Activity

          This redundant typedef was only present in the cmake -DPLUGIN_S3=NO build was exposed by a change by me to specify the C dialect that we are using. Previously, each compiler was allowed to guess, and end up choosing (among others) the 1990, 1999, or 2011 version of ISO/IEC 9899.

          marko Marko Mäkelä added a comment - This redundant typedef was only present in the cmake -DPLUGIN_S3=NO build was exposed by a change by me to specify the C dialect that we are using . Previously, each compiler was allowed to guess, and end up choosing (among others) the 1990, 1999, or 2011 version of ISO/IEC 9899.

          People

            marko Marko Mäkelä
            shulga Dmitry Shulga
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.