MDEV-28050: clang -Wtypedef-redefinition when PLUGIN_S3=NO

Let us remove the redundant typedef.
This problem was revealed by
commit 77c184df7c056da7364e606ac977cc2d3cd826ad